# scythe

./: .arc  .envrc  .gitignore  .pylintrc  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
scythe_cli/: cache.py  config.py  console.py  constants.py  globals.py  harvest.py  stack.py  utils.py
scythe_cli/application/: __init__.py  application.py  callbacks.py  dependencies.py  quickstart.py  stack.py  timer.py  timers.py  utils.py
scythe_cli/clock/: clock.py
scythe_cli/harvest_api/: __init__.py  api.py  schemas.py
scythe_cli/harvest_apy/: api.py  schemas.py
scythe_cli/ui/: apps.py  scythe.css  scythe.py
scythe_cli/ui/styles/: app.css  new-timer.css  timer-container.css  timer-modal.css  timer.css
scythe_cli/ui/widgets/: __init__.py  actions.py  new_timer.py  time_display.py  timer.py  timer_container.py  timer_modal.py  viewing_day.py
src/scythe/: __init__.py  cache.py  cli.py  decos.py  harvest_api.py  helpers.py  live_text.py  selection_menu.py  sync.py  utils.py
src/scythe/cli/: __init__.py  atomic.py  projects.py  projects_commands.py  running.py  stats.py  stats_commands.py  timer.py  timer_commands.py
src/scythe/clock/: __init__.py  numbers.py
src/scythe/helpers/: project.py
src/scythe/ui/: __init__.py  _helpers.py  _init.py  _menu.py  data_types.py  main.py  running.py  ui.py
tests/: test_scythe_cli.py
