[tool.poetry]
name = "scythe-cli"
version = "0.14.0"
description = "A Harvest is always better with a good tool"
authors = ["Sean Collings <seanrcollings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seanrcollings/scythe"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
xdg = "^5.1.1"
pydantic = "^1.9.0"
arc-cli = "7.0.0"
oyaml = "^1.0"
diskcache = "^5.4.0"
rich = "^12.0.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.7.0"
types-requests = "^2.27.7"
types-PyYAML = "^6.0.3"


[tool.poetry.scripts]
scythe = "scythe_cli.application:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
