[tool.poetry]
name = "scythe-cli"
version = "1.4.0"
description = "A Harvest is always better with a good tool"
authors = ["Sean Collings <me@seancollings.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seanrcollings/scythe"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
xdg = "^5.1.1"
arc-cli = "^8.6.2"
textual = "^0.45.1"
httpx = "^0.24.0"
msgspec = "^0.15.1"
keyring = "^23.13.1"
hishel = "^0.0.20"

[tool.poetry.group.dev.dependencies]
types-toml = "^0.10.8.6"
textual-dev = "^1.2.1"
black = "^20.8b1"
mypy = "^1.0"
pylint = "^2.7.0"
types-requests = "^2.27.7"
types-PyYAML = "^6.0.3"

[tool.poetry.scripts]
scythe = "scythe_cli.application.application:scythe"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
